addedmargin in img

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="col-lg-5">
                   <img
                     src="images/banner-images/headphone.png"
-                    class="d-block w-100"
+                    class="d-block w-100 mt-5"
                     alt="..."
                   />
                 </div>
@@ -111,7 +111,7 @@
                 <div class="col-lg-5">
                   <img
                     src="images/banner-images/tv.png"
-                    class="d-block w-100"
+                    class="d-block w-100 mt-5"
                     alt="..."
                   />
                 </div>
